Removal of WSTCP for ICE-C
Custom Websocket TCP bridge added for chat intergration. Cookies.js
added.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "js/vender/luavmjs"]
 	path = js/vender/luavmjs
 	url = https://github.com/kripken/lua.vm.js.git
-[submodule "js/vendor/luavmjs"]
-	path = js/vendor/luavmjs
-	url = https://github.com/kripken/lua.vm.js.git
+[submodule "js/vender/cookies"]
+	path = js/vender/cookies
+	url = https://github.com/felixge/node-mysql.git
